resolved spacing issue on right side of EDU pics

--- a/style/state.css
+++ b/style/state.css
@@ -89,4 +89,11 @@
     /*height: 500px;*/
   }
 
+  .education-details {
+    justify-content: center;
+    background-color: white;
+    padding-left: 10%;
+    padding-right: 0%;
+  }
+
 }
